# dex_arbitrage_bot

./: .env.example  README.md  main.py  models.py  pyproject.toml
aggregators/: jupiter.py
constants/: aggregator_name.py  exchange_name.py
core/: config.py
exchanges/: __init__.py  bingx.py  bitmart.py  coinex.py  mexc.py
utils/: shift_by.py
