[project]
name = "dex-arbitrage-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.17.0",
    "aiohttp==3.9.5",
    "ccxt>=4.4.48",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
