[project]
name = "dex-arbitrage-bot"
version = "0.1.0"
description = "Бот по поиску арбитражных сделок между DEX и CEX биржами"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.9.5",
    "ccxt>=4.4.48",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.1",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
